--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-modalbox": "^2.0.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-toast-message": "^2.1.5",
@@ -43,6 +44,7 @@
     "@babel/plugin-proposal-decorators": "^7.17.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-modalbox": "^1.4.10",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "17.0.1",
