--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
+    "expo-background-fetch": "~10.1.0",
     "expo-constants": "~13.0.0",
     "expo-font": "~10.0.4",
     "expo-linking": "~3.0.0",
@@ -30,6 +31,7 @@
     "expo-web-browser": "~10.1.0",
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
+    "random-words": "^1.1.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -37,12 +39,12 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-toast-message": "^2.1.5",
-    "react-native-web": "0.17.1",
-    "expo-background-fetch": "~10.1.0"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-decorators": "^7.17.9",
+    "@types/random-words": "^1.1.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-native-modalbox": "^1.4.10",
