--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-splash-screen": "~0.14.0",
     "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "expo-web-browser": "~10.1.0",
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
@@ -36,14 +37,14 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-modalbox": "^2.0.2",
+    "react-native-paper": "^4.12.3",
+    "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-toast-message": "^2.1.5",
-    "react-native-web": "0.17.1",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1",
-    "expo-updates": "~0.11.7"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
