--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/drawer": "^6.4.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/stack": "^6.2.2",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
